--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,6 +10,11 @@ html(lang="en")
         header
             h1 ZoomIn 
         main
-            h2 Welcome to ZoomIn
-            button Call
+            form#nick
+                input(type="text", placeholder="choose a nickname", required)
+                button Save
+            ul
+            form#message
+                input(type="text", placeholder="write a msg", required)
+                button Send
         script(src="/public/js/app.js")
