--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -13,11 +13,12 @@ html(lang="en")
             div#welcome 
                 form
                     input(placeholder="room name", required, type="text")
+                    input(placeholder="nick name", required, type="text")
                     button Enter Room
             div#room
                 h3
                 ul
-                form
+                form#msg
                     input(placeholder="message", required, type="text")
                     button Send
         script(src="/socket.io/socket.io.js") 
