--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -13,8 +13,10 @@ html(lang="en")
             div#welcome 
                 form
                     input(placeholder="room name", required, type="text")
-                    input(placeholder="nick name", required, type="text")
+                    input(placeholder="nick name", type="text")
                     button Enter Room
+                h4 Open Rooms 
+                ul
             div#room
                 h3
                 ul
