--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,18 +10,9 @@ html(lang="en")
         header
             h1 ZoomIn 
         main
-            div#welcome 
-                form
-                    input(placeholder="room name", required, type="text")
-                    input(placeholder="nick name", type="text")
-                    button Enter Room
-                h4 Open Rooms 
-                ul
-            div#room
-                h3
-                ul
-                form#msg
-                    input(placeholder="message", required, type="text")
-                    button Send
+            #myStream 
+                video#myFace(autoplay, playsinline, width="400", height="400" style="text-align: center") 
+                button#mute Mute
+                button#camera Stop Video
         script(src="/socket.io/socket.io.js") 
         script(src="/public/js/app.js")
